tests/fixtures/invalid/set_notin_bool.py
# Cannot use 'not in' with Set[int] and Bool
x: bool = {1, 2, 3} not in True
